# spurbreast-reproduction

./: .gitattributes  .gitignore  AGENTS.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements-colab.txt  requirements-local-cpu.txt  requirements-local-cu117.txt  requirements.txt
configs/: baseline.yaml  extension.yaml  reproduction.yaml  sensitivity.yaml  smoke_test.yaml
configs/locked/: LOCK.json  seed2025.yaml  seed2026.yaml  seed2027.yaml
configs/sensitivity_runs/: F1.yaml  F1_norm.yaml  F2.yaml  F2_norm.yaml  H1.yaml  H1_norm.yaml  H2.yaml  H2_norm.yaml  H3.yaml  H3_norm.yaml  H4.yaml  H4_norm.yaml  README.md
data/: README.md
data/interim/: README.md
data/processed/: README.md
data/raw/: README.md
data/splits/: README.md
docs/: COMPUTE_PLAN.md  DATA_AUDIT.md  DECISIONS.md  EXTENSIONS.md  LIMITATIONS.md  PAPER_SUMMARY.md  REPRODUCTION_PLAN.md  SMOKE_TEST.md  STATUS.md  SUCCESS_CRITERIA.md  TRACEABILITY.md
experiments/: README.md  registry.csv
notebooks/: 01_data_audit.ipynb  02_error_analysis.ipynb  colab_reproduction.ipynb
reports/: FINAL_REPORT.md
reports/final_results/: aggregate_metrics.json  calibration_bins.csv  calibration_summary.csv  field_strength_metrics.csv  (+2 more)
scripts/: check_environment.py  download_data.py  evaluate.py  evaluate_baselines.py  prepare_data.py  run_or_resume.py  select_sensitivity.py  summarize_results.py  train.py  visualize_preprocessing.py
tests/: test_config.py  test_data_subset.py  test_metrics.py  test_preprocessing.py  test_smoke_train.py  test_splits.py  test_summarize_results.py
(+12 files in other folders)
