[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spurbreast-repro"
version = "0.1.0"
description = "Close reproduction of the SpurBreast field-strength shortcut experiment"
readme = "README.md"
requires-python = ">=3.10,<3.12"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
