[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breast-mri-field-strength-bias"
version = "0.1.0"
description = "Reproducible analysis of magnetic-field-strength shortcut learning in breast MRI"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
